# dogu

./: .clang-format  .dogu-workspace  .eslintignore  .eslintrc.cjs  .gitignore  .pnp.cjs  .swift-format  .yarnrc.yml  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  backup.ab  docker-compose-arm64.yml  docker-compose-billing.yml  docker-compose-gcp.yml  docker-compose-macOS-arm64.yml  docker-compose-macOS-windows-x86_64.yml  docker-compose.env  docker-compose.yml  dockerfile  dockerfile.billing  dockerfile.gcp  dockerfile.run-test  dockerfile.testexecutor  dockerfile.testservice  dogu-onpremise.setting.test.env  dogu.config.json  dump_dogu_agent.ps1  entrypoint.sh  lint-staged.config.mjs  options.config.yaml  package.json  pull-tag.ps1  pull-tag.sh  tsconfig.eslint.json  tsconfig.json  turbo.json  validate-workspace.mjs  version.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: 01_bug.yml  02_feature.yml  03_docs.yml  04_refactor.yml  config.yml  docs.yml  feature.yml
.github/workflows/: build-dost-ghrunner.yml  build-dost-saas-development.yml  build-dost-saas-production.yml  build-dost-self-hosted.yml  build-dost.yml  ci-archive.yml  ci-docs.yml  ci-dogu-agent.yml  ci-dost.yml  ci-e2e.yml  ci-sync.yml  e2e.yml  publish-actions-development.yml  publish-dogu-agent-cloud-development.yml  publish-dogu-agent-cloud-production.yml  publish-dogu-agent-self-hosted.yml  publish-dogu-test.yml  publish-dogu.yml  publish-dost-cloud-development.yml  publish-dost-cloud-production.yml  publish-dost-saas-development.yml  publish-dost-saas-production.yml  publish-dost-self-hosted.yml  publish-e2e-dogu.yml  publish-npm-and-actions-development.yml  publish-npm-and-actions.yml  publish-self-hosted-dogu.yml  release-billing-server.yml  release-dev-cloud-dogu.yml  release-dev-dogu.yml  release-dev-influxdb.yml  release-docs.yml  release-dogu.yml  release-e2e-dogu.yml  release-gcp.yml  release-init-self-hosted-dogu.yml  release-npm-and-actions.yml  release-prod-cloud-dogu.yml  release-prod-dogu.yml  release-rc-self-hosted.yml  (+3 more)
.husky/: pre-commit
.yarn/versions/: 2145a6b8.yml  3e544113.yml  49067c13.yml  68375a1c.yml  d4a0a6ad.yml  e4204f48.yml  fb7b1e5e.yml
docs/: .env  .pnp.cjs  README.md  docker-compose.prod.yml  dockerfile  docusaurus.config.js  package.json  sidebars.js
docs/validation/: url.ts
dogu-actions/checkout/: README.md  action.config.yaml  package.json
dogu-actions/prepare/: README.md  action.config.yaml  nodemon.json  package.json  tsconfig.json
dogu-actions/run-test/: README.md  action.config.yaml  nodemon.json  package.json  tsconfig.json
e2e/: .env  .gitignore  jest.config.js  nodemon.json  package.json  tsconfig.json
e2e/scripts/: install-chromedriver.ts
e2e/src/: chrome-version.ts  chromedriver.ts  dost.ts  env.ts  gdc-screen-recorder.ts  index.ts  ios-helper.ts  l10n.ts  path-map.ts  playwright-driver.ts  process-manager.ts  screen-recorder.ts  time.ts  timer.ts  type.ts  utils.ts
e2e/test/: remote.test.ts
env-generator/: .gitignore  README.md  nodemon.json  package-lock.json  package.json
env-generator/src/: cli.ts  dto.ts  sheet_ids.ts  types.ts
nm-space/: .eslintrc.cjs  .gitignore  .yarnrc.yml  README.md  package.json  tsconfig.eslint.json  tsconfig.json
pipeline-samples/: device-facade-client.yaml  sample-cd-host.yaml  sample-demo.yaml  sample-ios.yaml  sample-log.yaml  sample-pk-loop.yaml  sample-pk.yaml  sample.yaml
pipeline-samples/template/: template-1.yaml  template-2.yaml  template-3.yaml  template-4.yaml
pre-release/: docker-compose.env  docker-compose.yml
prebuilds/protocol-exporter/: .eslintrc.cjs  .protolint.yaml  Dockerfile  README.md  package.json  tsconfig.exported-ts.private.json  tsconfig.exported-ts.public.json  tsconfig.json
prebuilds/routine-interface-exporter/: README.md  nodemon.json  package.json  tsconfig.json
projects/android-device-agent/: .gitignore  README.md  app.json  package.json  tsconfig.json
projects/android-io.appium.settings-builder/: package.json  tsconfig.json
projects/billing-server/: .env  .gitignore  README.md  package.json  tsconfig.json
projects/console-web-front/: .env  .eslintrc.json  .gitignore  .prettierrc  README.md  config.ts  environment.d.ts  global.d.ts  i18n.json  next.config.mjs  package.json  prebuild.mjs  prerun.mjs  sentry.client.config.ts  sentry.edge.config.ts  styled.d.ts  tsconfig.json
projects/console-web-server/: .env  .gitignore  README.md  nodemon.json  package.json  tsconfig.json
projects/device-server/: .gitignore  nodemon.json  package.json  tsconfig.json
projects/dogu-agent/: nodemon.json  package.json  tsconfig.json
projects/go-device-controller/: .env.development  .gitignore  README.md  go.mod  go.sum  main.go  package.json  tsconfig.json
projects/go-device-controller/desktop-capturer/: BUILD.gn  CMakeLists.txt
projects/go-device-controller/desktop-capturer/code/: main.cpp  myWindows.cpp  myWindows.h  mywebrtc.cpp  mywebrtc.h  tcpClient.h  tcpClientPosix.cpp  tcpClientWin.cpp  webrtcImports.h  webrtcUtil.h  webrtcUtilLinux.cpp  webrtcUtilMacOS.cpp  webrtcUtilWindows.cpp  windows.cpp  windows.h
projects/host-agent/: .gitignore  nodemon.json  options.config.yaml  package.json  tsconfig.json
projects/ios-device-agent/: README.md  package.json  (+1 more)
samples/pytest-bdd-playwright-dogu-report/: package.json  pyproject.toml  pytest.ini
samples/pytest-bdd-playwright-dogu-report/tests/: landing_external_links.feature  test_landing_external_links.py
samples/pytest-playwright-dogu-report/: README.md  package.json  pyproject.toml
samples/pytest-playwright-dogu-report/tests/: conftest.py  test_py_application.py
samples/test-python-playwright/: README.md  pyproject.toml
scripts/: device-csv-parser.ts  env-generator.mjs  env_intranet.ts  mirror-settings-to-nm-space.mjs  parse-inputs.mjs  test-child-process.ts  test.ts  watch-packages-only-changed.ts  watch-packages.ts
shells/: billing-server-entrypoint.sh  entrypoint-dogu-agent.sh  entrypoint.sh  version.sh
validation/: package.json
validators/: package.json
(+3126 files in other folders)
