[tool.poetry]
name = "pytest-bdd-playwright-dogu-report"
version = "0.1.0"
description = ""
authors = ["oneofthezombies <hunhoekim@gmail.com>"]
readme = "README.md"
packages = [{include = "pytest_bdd_playwright_dogu_report"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-playwright = "^0.3.3"
pytest-dogu-report = "^1.0.0"
pytest-bdd = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
