[tool.poetry]
name = "pytest-playwright-dogu-report"
version = "0.1.0"
description = ""
authors = ["oneofthezombies <hunhoekim@gmail.com>"]
readme = "README.md"
packages = [{include = "pytest_playwright_dogu_report"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-playwright = "^0.3.3"
pytest-dogu-report = "^1.0.0"
black = "^23.3.0"
pylint = "^2.17.4"
playwright = "^1.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 180
disable = """
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    broad-exception-raised,
    broad-exception-caught,
    too-few-public-methods,
    unused-argument,
"""

[tool.pylint.BASIC]
good-names = "e"
